# demo-eclipse

./: ATM.cpp  Account.cpp  Bank.cpp  BaseDisplay.cpp  CMakeLists.txt  Makefile  README.md  TestObjectFactory.cpp  build.sh  buildARM.sh  buildx86.sh  cyclone.h  dbutil.cpp  decide.cpp  main.cpp  reset.sh  rule.yaml  sonar-project.properties  sonarqube-start.sh
.github/workflows/: makefile.yml  semgrep.yml
include/: ATM.h  Account.h  Bank.h  BaseDisplay.h  CODSTA-MCPP-01-3.h  TestObjectFactory.h  dbutil.h
misc/: BD-PB-NORETURN.cpp  BD-PB-SUBSEQFRWD.h  CODSTA-MCPP-01-3.cpp  CODSTA-MCPP-11_a_cpp11-4.cpp  CODSTA-MCPP-17_c-3.cpp
misc/aaa/: CODSTA-MCPP-103.cpp  CODSTA-MCPP-15_b-3.h  CODSTA-MCPP-31.cpp  CODSTA-MCPP-50.cpp  CODSTA-MCPP-53.h
misc/bbb/: CODSTA-MCPP-04.cpp  CODSTA-MCPP-42.cpp  CODSTA-MCPP-48.cpp
misc/bbb/ccc/: CODSTA-MCPP-40.h  CODSTA-MCPP-45.cpp  CODSTA-MCPP-57.cpp
misc/my/: my.c
